--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.dbrizov.naughtyattributes": "2.1.4",
     "com.unity.addressables": "1.21.14",
     "com.unity.collab-proxy": "2.0.5",
     "com.unity.feature.development": "1.0.1",
@@ -8,6 +9,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
     "de.vrbits.sensei": "https://github.com/vr-bits/UnitySensei.git",
+    "robtranquillo.graphviewtemplate": "file:D:/Projekte/Unity/_privat/UnityGraphViewTemplate/Package",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -38,8 +40,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.dbrizov.naughtyattributes": "2.1.4"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
