--- a/Assets/SceneFlowBuilder/GlobalAssembly.asmdef
+++ b/Assets/SceneFlowBuilder/GlobalAssembly.asmdef
@@ -5,7 +5,8 @@
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:d5a9c77833d297949aa674daa58841a2"
+        "GUID:d5a9c77833d297949aa674daa58841a2",
+        "GUID:8d4d11630efb7ec43bb7683c3145901f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
